--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,10 +1,98 @@
 <!DOCTYPE html>
+
 <html>
-    <head>
-        <title>Start Page</title>
+ <title>Edition des taux de remise (AJAX)</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <!-- On charge jQuery -->
+        <script	src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <!-- On charge le moteur de template mustache https://mustache.github.io/ -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js"></script>
+        <script>
+            $(document).ready(// Exécuté à la fin du chargement de la page
+                    function () {
+                        // On montre la liste des codes
+                        showCodes();
+                    }
+            );
+
+            function showCodes() {
+                // On fait un appel AJAX pour chercher les codes
+                $.ajax({
+                    url: "allCodes",
+                    dataType: "json",
+                    error: showError,
+                    success: // La fonction qui traite les résultats
+                            function (result) {
+                                // Le code source du template est dans la page
+                                var template = $('#codesTemplate').html();
+                                // On combine le template avec le résultat de la requête
+                                var processedTemplate = Mustache.to_html(template, result);
+                                // On affiche la liste des options dans le select
+                                $('#codes').html(processedTemplate);
+                            }
+                });
+            }
+
+            // Ajouter un code
+            function addCode() {
+                $.ajax({
+                    url: "addCode",
+                    // serialize() renvoie tous les paramètres saisis dans le formulaire
+                    data: $("#codeForm").serialize(),
+                    dataType: "json",
+                    success: // La fonction qui traite les résultats
+                            function (result) {
+                                showCodes();
+                                console.log(result);
+                            },
+                    error: showError
+                });
+                return false;
+            }
+
+            // Supprimer un code
+            function deleteCode(code) {
+                $.ajax({
+                    url: "deleteCode",
+                    data: {"code": code},
+                    dataType: "json",
+                    success: 
+                            function (result) {
+                                showCodes();
+                                console.log(result);
+                            },
+                    error: showError
+                });
+                return false;
+            }
+
+            // Fonction qui traite les erreurs de la requête
+            function showError(xhr, status, message) {
+                alert(JSON.parse(xhr.responseText).message);
+            }
+
+        </script>
+        <!-- un CSS pour formatter la table -->
+        <link rel="stylesheet" type="text/css" href="css/tableformat.css">
     </head>
     <body>
-        <h1>Hello World!</h1>
+        
+        <h1>
+            DONNEES PERSONNELLES :
+        </h1>
+         <!-- La zone où les résultats vont s'afficher -->
+        <div id="codes"></div>
+
+        <!-- Le template qui sert à formatter la liste des codes -->
+        <script id="codesTemplate" type="text/template">
+            <TABLE>
+            <tr><th>Customer_id</th><th>ZIP</th><th>NAME</th><th>ADRESSLINE1</th><th>ADRESSLINE2</th><th>CITY</th><th>STATE</th><th>PHONE</th><th>FAX</th>EMAIL<th>CREDIT_LIMIT</th></tr>
+            {{! Pour chaque enregistrement }}
+            {{#records}}
+                {{! Une ligne dans la table }}
+                <TR><TD>{{discountCode}}</TD><TD>{{formattedRate}}</TD><TD><button onclick="deleteCode('{{discountCode}}')">Supprimer</button></TD></TR>
+            {{/records}}
+            </TABLE>
+        </script>
     </body>
 </html>
