--- a/src/main/webapp/newhtml.html
+++ b/src/main/webapp/newhtml.html
@@ -26,7 +26,7 @@ and open the template in the editor.
           ['NY', 600]
         ]);
 
-        var options = {region: 'US'};
+        var options = {region: 'US' ,resolution: 'provinces'};
 
         var chart = new google.visualization.GeoChart(document.getElementById('regions_div'));
 
