Vue client commande terminer

--- a/src/main/webapp/administrateur.html
+++ b/src/main/webapp/administrateur.html
@@ -138,12 +138,10 @@ and open the template in the editor.
  <form id='codeForm' onsubmit="event.preventDefault() ; doAjax()">
             <label for="start">Date debut :</label>
             <input name="dateDebut" type="date" id="start" 
-                value="2018-07-22"
-                min="2000-01-01" max="2018-12-31">
+                value="2018-07-22">
             <label for="fin">Date fin :</label>
             <input name="dateFin" type="date" id="fin" 
-                value="2018-07-22"
-                min="2000-01-01" max="2018-12-31">
+                value="2018-07-22">
             <input name="date" value="Changement date" type="SUBMIT">
  </form>
 <div id="piechart" style="width: 900px; height: 500px;"></div>
@@ -152,12 +150,10 @@ and open the template in the editor.
   <form id='geoForm' onsubmit="event.preventDefault() ; doGeoAjax()">
             <label for="start">Date debut :</label>
             <input name="dateDebut" type="date" id="startgeo" 
-                value="2018-07-22"
-                min="2000-01-01" max="2018-12-31">
+                value="2018-07-22">
             <label for="fin">Date fin :</label>
             <input name="dateFin" type="date" id="fingeo" 
-                value="2018-07-22"
-                min="2000-01-01" max="2018-12-31">
+                value="2018-07-22">
             <input name="date" value="Changement date" type="SUBMIT"> 
   </form>
    <div id="regions_div" style="width: 900px; height: 500px;"></div>      
@@ -166,14 +162,12 @@ and open the template in the editor.
         <label for="start">Date debut :</label>
 
         <input name="dateDebut" type="date" id="startclient" 
-            value="2018-07-22"
-            min="2000-01-01" max="2018-12-31">
+            value="2018-07-22">
 
         <label for="fin">Date fin :</label>
      
         <input name="dateFin" type="date" id="finclient" 
-                value="2018-07-22"
-                min="2000-01-01" max="2018-12-31">
+                value="2018-07-22">
         <input name="date" value="Changement date" type="SUBMIT">
      
   </form>
