Gestion de la date et des messages d'erreur ou de confirmation
-Modification de index.html, qui renvoie un lien vers la page d'accueil (Accueil.jsp)

Client:
-Ajout de messages d'erreur pour la page d'accueil (Accueil.jsp)
-Meilleure gestion des exceptions pour le login
-Les achats se font maintenant à la date d'aujourd'hui
-Les frais de port sont aléatoires et non plus fixe
-Ajout de messages de confirmation lors des transactions (ajout, suppression, modification)

Admin:
-Les charts se lancent par défaut à la date d'aujourd'hui



Fonction pour récupérer les companies de livraison..?

--- a/src/main/webapp/administrateur.html
+++ b/src/main/webapp/administrateur.html
@@ -235,12 +235,17 @@ and open the template in the editor.
         <br/>
         <form id='codeForm' style="text-align:center;">
         <label for="start">Date debut :</label>
-        <input name="dateDebut" type="date" id="start" 
-            value="2018-07-22">
+        <input name="dateDebut" type="date" id="start">
         <label for="fin">Date fin :</label>
-        <input name="dateFin" type="date" id="fin" 
-            value="2018-07-22">  
+        <input name="dateFin" type="date" id="fin">  
         </form>
+        
+        <script>
+        var today = new Date();
+        var formattedToday = today.getFullYear()+'-'+(today.getMonth()+1)+'-'+today.getDate();
+        $('#start').val(formattedToday);
+        $('#fin').val(formattedToday);
+        </script>
     </fieldset>
         <input name="g" type="radio" onclick="showCodes()" value="Changer ses Données">
         <label>Table Produit</label>
