--- a/src/main/webapp/administrateur.html
+++ b/src/main/webapp/administrateur.html
@@ -439,7 +439,7 @@ and open the template in the editor.
     <script id="codesTemplate2" type="text/template">
             <h1 style="color:white;font-family: Arial Black;"> Table Produits </h1>
             
-            <TABLE border=5 style="margin-bottom:60px;padding:5px;color:white;font-family:Arial Black">
+            <TABLE border=5 bgcolor="#000000" style="margin-bottom:60px;padding:5px;color:white;font-family:Arial Black">
                 
                 <tr>
                     <th>Numero du produit</th><th>Numero du fournisseur</th><th>Code du produit</th><th>Prix</th><th>Quantité disponible</th>
@@ -459,9 +459,11 @@ and open the template in the editor.
 
         </script>
 
-    <div id="piechartclient" style="width: 900px; height: 500px;  margin-left:400px;position:absolute;"></div>  
+    <div id="piechartclient" style="width: 900px; height: 500px;  margin-left:200px;position:absolute;"></div>  
     <footer class="bas">
         PROJET JAVA 
+        <br/>
+        Conditions of UsePrivacy NoticeInterest-Based Ads© 1996-2018, Inc. or its affiliates
     </footer> 
 
 </body>
